--- a/home.html
+++ b/home.html
@@ -3,21 +3,58 @@
 <head>
   <title>Pittsburgh Movie Reviews</title>
     <!-- META TAGS -->
-      <!-- add a meta tag here to indicate you are the author -->
+	<meta name="author" content="rambo">
     
     <!-- STYLESHEETS -->
-      <!-- add the stylesheets for foundation and normalize here -->
+	<link rel="stylesheet" href="css/foundation.css" type="text/css">
+	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 
     <!-- FAVICON -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
 </head>
 <body>
-  <!-- NAVIGATION -->
+	<div class="contain-to-grid">
+	  <nav class="top-bar" data-topbar>
+	    <ul class="title-area">
+	      <li class="name">
+	        <h1><a href="home.html">PGH Movie Reviews</a></h1>
+	      </li>
+	    </ul>
 
-  <!-- CONTENT -->
+	   	<section class="top-bar-section">
+		  <ul class="left">
+		    <li><a href="theaters.html">In Theaters</a></li>
+		    <li><a href="report.html">Report a Movie</a></li>
+		  </ul>
+		</section>
+
+	  </nav>
+	</div>
+	
+
+  	<div class="row">
+	  <div class="small-7 columns">
+	    <!-- MAIN CONTENT GOES HERE -->
+	  </div>
+
+	  <div class="small-1 columns">
+	    &nbsp;
+	  </div>
+
+	  <div class="small-4 columns">
+	    <!-- SIDEBAR CONTENT GOES HERE -->
+	  </div>
+	</div>
 
   <!-- FOOTER -->
+<footer class="footer">
+  <div class="row">
+
+    <!-- footer content goes here -->
+
+  </div>
+</footer>
 
 
 </body>
